# Numclass

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-NOTICE.txt  README.md  SECURITY.md  classify_stats.py  decorators.py  isotest.py  needs_update_sum_of_3_cubes_1_1000.txt  numclass.py  output_manager.py  pyproject.toml  requirements.txt  sum3c.py  test_numclass.py  utility.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
classifiers/: CHANGELOG.md  arithmetic_divisor.py  curiosities.py  digit_based.py  fun_number.py  polygonal_figurate.py  prime.py  pseudoprime_crypto.py  sequences.py
data/: b104272.txt  sum_of_3_cubes_solutions.py
results/: needs_update_sum_of_3_cubes_1_1000.txt
src/numclass/: __init__.py  __main__.py  classify.py  cli.py  config.py  context.py  dataio.py  display.py  expreval.py  fmt.py  intersections.py  output_manager.py  progress.py  registry.py  runtime.py  transform.py  utility.py  workspace.py
src/numclass/classifiers/: arithmetic_divisor.py  combinatorial_geometric.py  conjectures.py  curiosities.py  curiosity_constants.py  digit_based.py  diophantine.py  dynamical_sequences.py  fun_number.py  named_sequences.py  polygonal_figurate.py  prime.py  pseudoprime_crypto.py
src/numclass/data/: b000041.txt  b000108.txt  b000110.txt  b000668.txt  b001006.txt  b002093.txt  b002858.txt  b004394.txt  b005114.txt  b008277.txt  b132393.txt  b180340.txt  curiosity_constants.tsv  erdos_woods.toml  fun_numbers.tsv  hard_factors.txt  intersections.toml  special_inputs.tsv  sum_of_three_cubes.toml
tests/: test_numclass.py  verify_three_cubes.py
user/: fun_numbers.py  intersections.py  settings.py
(+11 files in other folders)
